--- a/index.html
+++ b/index.html
@@ -336,6 +336,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 </section>
 <!-- //team -->
+<iframe src="https://webchat.botframework.com/embed/healthbot-kjvrzpy?s=63-BDM6MY5M.vy5FJHrGxDNAaDxr0SOja1iHr1lbtNPNHq5vqix7g4w" style='width: 100%; height:400px'></iframe>
 
 <!-- footer top-->
 <div class="footer-top py-md-4">
