--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 <!-- copyright -->
 <div class="copyright py-3 text-center">
-	<p>© 2019 Men's Salon. All Rights Reserved | Design by <a href="http://w3layouts.com/" target="=_blank"> W3layouts </a></p>
+	<p>© 2023  All Rights Reserved by satya prasad | Developed for FRT project </a></p>
 </div>
 <!-- //copyright -->
 
