--- a/contact.html
+++ b/contact.html
@@ -171,7 +171,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 <!-- copyright -->
 <div class="copyright py-3 text-center">
-	<p>© 2023 All Rights Reservedby satya prasad | Developed for FRT poject</a></p>
+	<p>© 2023 .All Rights Reservedby satya prasad | Developed for FRT poject</a></p>
 </div>
 <!-- //copyright -->
 
