--- a/healthbot.html
+++ b/healthbot.html
@@ -1,2 +1,3 @@
 <iframe src="https://webchat.botframework.com/embed/healthbot-kjvrzpy?s=63-BDM6MY5M.vy5FJHrGxDNAaDxr0SOja1iHr1lbtNPNHq5vqix7g4w" style='width: 100%; height:400px'></iframe>
 
+<li class="mr-2"><a href="contact.html">Contact</a></li>
