--- a/services.html
+++ b/services.html
@@ -48,7 +48,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<li class="active"><a href="services.html">Services</a></li>
 				<li class=""><a href="gallery.html">Gallery</a></li>
 				<li class="mr-2"><a href="contact.html">Contact</a>
-				<li class="mr-2"><a href="healthbot.html"></a>	
+				<li class="mr-2"><a href="healthbot.html">healthbot</a>	
 				</li>
 				
 				<li class=""><span><span class="fa fa-phone"></span> +12 34 3456 7890</span></li>
